--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+  </head>
+  <body>
     <script src="https://cdn.firebase.com/js/client/1.0.6/firebase.js"></script>
     <script src='bower_components/jquery/dist/jquery.min.js'></script>
     <script src='bower_components/handlebars/handlebars.min.js'></script>
@@ -7,21 +9,21 @@
     <script src='bower_components/ember-data/ember-data.min.js'></script>
     <script src='bower_components/emberfire/dist/emberfire.js'></script>
     <script src='javascripts/app.js'></script>
-  </head>
-  <body>
-    <script type="text/x-handlebars">
-    <h1>To Buy</h1>
-    {{outlet}}
-  </script>
-
-  <script type="text/x-handlebars" data-template-name="items">
-    {{input id='new-item' type='text' value=itemTitle action='createItem' placeholder='What do we need to buy?' }}
-    <h3>Items</h3>
-    <ul>
-    {{#each}}
-      <li>{{title}}</li>
-    {{/each}}
-    </ul>
-  </script>
+    <script>
+      function compile(template) {
+        var templateName = template.split('/templates/').reverse()[0].replace('.hbs', '');
+        $.ajax({
+          url: template,
+          cache: false,
+          async: false,
+          success: function (source) {
+            var input = Ember.Handlebars.precompile(source.toString());
+            Ember.TEMPLATES[templateName] = Ember.Handlebars.template(input);
+          }
+        });
+      }
+      compile('http://localhost:8000/javascripts/templates/application.hbs');
+      compile('http://localhost:8000/javascripts/templates/items.hbs');
+    </script>
   </body>
 </html>
