some stuff working WIP

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
   </head>
   <body>
+    <link rel='stylesheet' href='stylesheets/style.css' />
     <script src="https://cdn.firebase.com/js/client/1.0.6/firebase.js"></script>
     <script src='bower_components/jquery/dist/jquery.min.js'></script>
     <script src='bower_components/handlebars/handlebars.min.js'></script>
