--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       }
       compile('/javascripts/templates/application.hbs');
       compile('/javascripts/templates/items.hbs');
+      compile('/javascripts/templates/_header.hbs');
+      compile('/javascripts/templates/_items.hbs');
+      compile('/javascripts/templates/_bottom_utilities.hbs');
     </script>
   </body>
 </html>
