add Apple mobile web app stuff

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   <body>
     <link rel='stylesheet' href='css/style.css' />
     <link rel="stylesheet" type="text/css" href="//cloud.typography.com/7494032/713102/css/fonts.css" />
+    <link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png"/>
     <script src="https://cdn.firebase.com/js/client/1.0.6/firebase.js"></script>
     <script src='bower_components/jquery/dist/jquery.min.js'></script>
     <script src='bower_components/handlebars/handlebars.min.js'></script>
