--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <link rel='stylesheet' href='css/style.css' />
     <link rel="stylesheet" type="text/css" href="//cloud.typography.com/7494032/713102/css/fonts.css" />
-    <link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png"/>
+    <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
     <script src="https://cdn.firebase.com/js/client/1.0.6/firebase.js"></script>
     <script src='bower_components/jquery/dist/jquery.min.js'></script>
     <script src='bower_components/handlebars/handlebars.min.js'></script>
