--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-  </head>
-  <body>
+    <title>Grocerease</title>
     <link rel='stylesheet' href='css/style.css' />
     <link rel="stylesheet" type="text/css" href="//cloud.typography.com/7494032/713102/css/fonts.css" />
-    <link rel="apple-touch-icon" sizes="120x120" href="touch-icon-iphone-retina.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png">
     <script src="https://cdn.firebase.com/js/client/1.0.6/firebase.js"></script>
     <script src='bower_components/jquery/dist/jquery.min.js'></script>
     <script src='bower_components/handlebars/handlebars.min.js'></script>
@@ -39,5 +38,7 @@
       compile('javascripts/templates/_items.hbs');
       compile('javascripts/templates/_bottom_utilities.hbs');
     </script>
+  </head>
+  <body>
   </body>
 </html>
