add Gruntfile and minify css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Grocerease</title>
-    <link rel='stylesheet' href='css/style.css' />
+    <link rel='stylesheet' href='css/style.min.css' />
     <link rel="stylesheet" type="text/css" href="//cloud.typography.com/7494032/713102/css/fonts.css" />
     <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png">
     <script src="https://cdn.firebase.com/js/client/1.0.6/firebase.js"></script>
